# dune2-macos

./: README.txt  xmaketar.ksh  xmaketar.sh
dunelib/: ChangeLog  Makefile.lnx  Makefile.mac  Makefile.vc  README.txt  dunelib.c  dunelib.h  ezusb.c  ezusb.h  kfir.h  kfir_dvd1_ntsc.c  kfir_dvd1_pal.c  kfir_dvd2_5mbit_ntsc.c  kfir_dvd2_5mbit_pal.c  kfir_dvd2_long_ntsc.c  kfir_dvd2_long_pal.c  kfir_dvd2_ntsc.c  kfir_dvd2_pal.c  kfir_svcd1_mpeg2_pal.c  kfir_svcd2_mpeg2_ntsc.c  kfir_svcd2_mpeg2_pal.c  kfir_svcd2_svcd_ntsc.c  kfir_svcd2_svcd_pal.c  kfir_vcd2_mpeg1_ntsc.c  kfir_vcd2_mpeg1_pal.c  kfir_vcd2_vcd_ntsc.c  kfir_vcd2_vcd_pal.c  libusb1.c
dunetools/duned/: Makefile.lnx  Makefile.vc  dunec  dunec.c  duned  duned.c  duned.h  duned.rc  dunesh  ntmsg.c  ntmsg.h  ntmsg.mc  server.c  server.h  service.c  service.h  serviceinst.c  version.c  version.h  win32.c
dunetools/duned/cgi-bin/: dune
dunetools/dunefilter/: ChangeLog  Makefile.lnx  Makefile.vc  dunefilter  dunefilter.c
dunetools/duneinit/: Makefile.lnx  Makefile.vc  duneinit  duneinit.c
dunetools/dunerec/: ChangeLog  Makefile.lnx  Makefile.mac  Makefile.vc  dunerec.c  dunerec.txt
dunetools/dunevtx/: Makefile.lnx  Makefile.vc  README.txt  duneale  duneproginfo  dunetext  dunevbi  dunevtx  dunevtx.c  dunevtx.h  hamm.c  hamm.h
